# WormBlazz

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/tests/: test_api.py
backend/wormblazz/: __init__.py  apify_client.py  apify_instagram.py  apify_tiktok.py  cache.py  crawlers.py  graph.py  jobs.py  local_scraper.py  main.py  models.py  service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  networkApi.ts  types.ts
frontend/src/components/: ArchitectureGraph.tsx  GraphLegend.tsx  GraphNode.tsx  GraphToolbar.tsx  NetworkOverviewPanel.tsx  NodeDetailPanel.tsx  SocialCanvasLayer.tsx  SocialNode.tsx
frontend/src/utils/: layoutGraph.ts  profileUrl.ts
