[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "wormblazz"
version = "0.1.0"
description = "FastAPI backend for public social network graphing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "httpx==0.28.1",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

